--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "classnames": "^1.1.4",
     "react": ">=0.12",
-    "react-bootstrap": ">=0.18.0"
+    "react-bootstrap": "0.18.0"
   },
   "devDependencies": {
     "babel": "^4.7.16",
